# AI-boardgame

./: .gitignore  12-02.txt  README.md  TODO.md  ToDo.txt  pyproject.toml  tableCornerInfo.txt
docs/: classes.puml  classes_AI-Boardgame.plantuml  classes_pieces.plantuml  conf.py  index.rst  packages_AI-Boardgame.plantuml  packages_pieces.plantuml  pontozas.txt
docs/uml/: component.plantuml  package.plantuml  packages_package.plantuml  usecase.plantuml
docs/uml/class/gameplay/: classes_gameplay.plantuml  classes_player.plantuml  classes_utility.plantuml  gameplay.plantuml  player.plantuml
docs/uml/class/logic/engine/: classes_aux.plantuml  classes_engine.plantuml  classes_move.plantuml  classes_pieces.plantuml  engine.plantuml  pieces.plantuml
docs/uml/class/logic/stockfish/: classes_stockfish.plantuml  stockfish.plantuml
docs/uml/class/robot/: classes_robot.plantuml  robot.plantuml
docs/uml/class/view/: classes_view.plantuml  view.plantuml
docs/uml/class/vision/: classes_camera.plantuml  classes_classifier.plantuml  classifier.plantuml  vision.plantuml
docs/uml/component/: test.plantuml
src/: main.py  test.py
src/aiBoardGame/: __init__.py  main.py  main2.py  player.py  utility.py  xiangqi.py
src/aiBoardGame/game/: __init__.py  player.py  utility.py  xiangqi.py
src/aiBoardGame/gameplay/: __init__.py  player.py  utility.py  xiangqi.py
src/aiBoardGame/logic/: __init__.py  advisor.py  auxiliary.py  cannon.py  chariot.py  elephant.py  general.py  horse.py  main.py  move.py  piece.py  replay.py  soldier.py  util.py  utility.py  utils.py  xiangqi.py  xiangqiBoardGeneration.py  xiangqiEngine.py
src/aiBoardGame/logic/data/: game2.txt
src/aiBoardGame/logic/engine/: __init__.py  auxiliary.py  move.py  replay.py  utility.py  xiangqiEngine.py
src/aiBoardGame/logic/engine/data/: game1.txt
src/aiBoardGame/logic/engine/pieces/: __init__.py  abbreviations.py  advisor.py  cannon.py  chariot.py  elephant.py  general.py  horse.py  piece.py  soldier.py
src/aiBoardGame/logic/pieces/: __init__.py  abbreviations.py  advisor.py  cannon.py  chariot.py  elephant.py  general.py  horse.py  piece.py  soldier.py
src/aiBoardGame/logic/stockfish/: __init__.py  fairyStockfish.py
src/aiBoardGame/model/: board.py
src/aiBoardGame/robot/: __init__.py  robotArm.py
src/aiBoardGame/ui/: mainWindow.ui
src/aiBoardGame/view/: boardTabWidget.py  calibrationTypesWidget.py  calibrationWidget.py  cameraFeed.py  cameraTabWidget.py  cameraThread.py  mainWindow.py  utility.py  utils.py  xiangqiWindow.py
src/aiBoardGame/view/ui/: boardTabWidget.ui  calibrationTypesWidget.ui  calibrationWidget.ui  cameraTabWidget.ui  mainWindow.ui  xiangqiWindow.py  xiangqiWindow.ui
src/aiBoardGame/vision/: __init__.py  boardImage.py  camera.py  helper.py  test.py
src/aiBoardGame/vision/characterRecognition/: casiaDataSet.py  cnOCR.py  test.py
src/aiBoardGame/vision/xiangqiPieceClassifier/: __init__.py  dataset.py  earlyStopping.py  model.py  utility.py
src/model/: board.py
src/vision/: board.py  camera.py  detection.py
tests/: test_camera.py  test_classifier.py  test_engine.py  test_pieces.py  test_stockfish.py
tests/data/: camCalibs.npz
tests/data/games/: game2.txt
